--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calculadora de hidratacion</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Caculadora de hidratacion</title>
   </head>
   <body>
-        <div>
-            <div>
-                <div>
+        <div id="contenedor">
+            <div id="calculadora">
+                <div class="contenido">
                     <h1>Hidratación Basal</h1>
-                    <p>Completa todos los datos</p>
-                    <input type="number" placeholder="Peso en kg"/>
-                    <p>* Debe completar todos los datos</p>
-                    <button>Calcular</button>
-                    <p>71cc/h</p>
-                    <p>m+m/2 : 105cc/h</p>
+                    <p class="item">Completa todos los datos</p>
+                    <input class="item" type="number" placeholder="Peso en kg"/>
+                    <p class="item" id="error">* Debe completar todos los datos</p>
+                    <button class="item" id="calcular">Calcular</button>
+                    <p class="item resultado" id="flu">71cc/h</p>
+                    <p class="item resultado" id="man">m+m/2 : 105cc/h</p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div id="detalle">
+                <div class="contenido">
                     <h1>¿Como se calcula?</h1>
                     <ul>
                         <li>De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
