--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           />
           <p class="item" id="error">* Debe completar todos los datos</p>
           <button class="item" id="calcular">Calcular</button>
+          <p class="item resultado" id="id">cc</p>
           <p class="item resultado" id="volumen">Volumen diario</p>
           <p class="item resultado" id="flujo">71cc/h</p>
           <p class="item resultado" id="flujo_medio">m+m/2 : 105cc/h</p>
